--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1 class="titulo">código secreto</h1>
-
-  <main class="main">
-    <section class="form box">
-      <form action="">
-        <label for="input-texto">Solo letras minúsculas, sin acento</label>
-        <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="Ingrese el texto aqui">
-        <input class="btn" type="submit" value="encriptar!" id="btn-encriptar">
-        <input class="btn" type="submit" value="desencriptar!" id="btn-desencriptar">
-      </form>
-    </section>
+<html>
+  <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <script src="script.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+  </head>
+  <body>
+  <div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Solo letras minúsculas sin acento</h5>
+        <div class="input-group mb-3"
+       id="">
+        <input  id="mensaje" class="form-control" placeholder="Frase a encriptar" aria-label="Username" aria-describedby="basic-addon1">
+      </div>
+        <button onclick=encriptar() class="btn btn-danger" >Encriptar</a>
+        <button onclick=desEncriptar() class="btn btn-primary">Desencriptar</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Mensaje encriptado</h5>
+        
+        <input type="text" id="mensaje2"class="form-control"  aria-describedby="basic-addon1">
+      </div>
+        <button onclick=copiar() class="btn btn-success">Copiar</a>
+      </div>
+    </div>
+  </div>
+</div>
+   
   
-    <section class="msg box">
-      <h2 id="">Mensaje encriptado:</h2>
-      <input class="text-input" type="text" id="msg"></input>
-      <input class="btn" type="submit" value="copiar" id="btn-copy">
-    </section>
-  </main>
-
-  <script src="script.js"></script>
-</body>
+  </body>
 </html>
+<script src="script.js"></script>
